--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xinwenchao/apache-httpd",
+  "name": "@xinwenchao/httpd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/boat3471/apache-httpd.git"
+    "url": "git+https://github.com/boat3471/httpd.git"
   },
   "author": "wenchao.xin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/boat3471/apache-httpd/issues"
+    "url": "https://github.com/boat3471/httpd/issues"
   },
-  "homepage": "https://github.com/boat3471/apache-httpd#readme"
+  "homepage": "https://github.com/boat3471/httpd#readme"
 }
